Cleanup up to Ch. 60

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -390,24 +390,24 @@
 <p class="itemText">And the people of Ethiopia took flutes, and blew horns, and beat drums, and played on pipes, and the Brook of Egypt was moved and astonished at the noise of their songs and their rejoicings; and with them were mingled outcries and shouts of gladness. And their idols (which they had made with their hands and which were in the forms of men, dogs, and cats) fell down, and the high towers, and also the figures of birds, made of gold and silver, fell down also and were broken in pieces. For Zion shon...</p>
 </li>
 <li>
-<p class="itemTitle">Of the Return of Zadok the Priest, and the giving of the gift</p>
-<p class="itemText">And when Zadok the priest returned to Solomon the King he found him sorrowful. And the King answered and said unto Zadok the priest, “When the Queen came there appeared to me by night this vision: It seemed as if I were standing in the chamber of Jerusalem, and the sun came down from heaven into the land of Judah, and lighted it up with great splendour. And having tarried a time it went down and lighted up the country of Ethiopia, and it did not return to the land of Judah. And again the sun cam...</p>
+<p class="itemTitle">Of the return of Zadok the Priest, and the giving of the gift</p>
+<p class="itemText">And when Zadok the Priest returned to Solomon the King he found him sorrowful. And the King answered and said to Zadok the Priest, “When the Queen came there appeared to me by night this vision: It seemed as if I were standing in the chamber of Jerusalem, and the sun came down from heaven into the land of Judah, and lighted it up with great splendor. And having lingered a time it went down and lighted up the Country of Ethiopia, and it did not return to the land of Judah. And again the sun came ...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Fall of Zadok the Priest</p>
-<p class="itemText">And when Zadok saw this he fell forward on his face flat upon the ground, and his spirit was poured out over him, for he was terrified; and he became like a dead man. And when he tarried in coming out Solomon sent to him Îyôas (Benaiah), the son of Yôdâḥê, and he found Zadok like one dead. And he lifted up the head of Zadok, and felt his heart and his nose to find out whether there was any sign of breath being in him; and he fanned him, and lifted him up, and rubbed him and laid him out upon the...</p>
+<p class="itemTitle">Concerning the fall of Zadok the Priest</p>
+<p class="itemText">And when Zadok saw this he fell forward on his face flat upon the ground, and his spirit was poured out over him, for he was terrified; and he appeared to be dead. And when he delayed in coming out Solomon sent Benaiah to him, the son of Yôdâḥê, and he found Zadok like one who was dead. And he lifted up the head of Zadok, and felt his heart and his nose to find out whether there was any sign of breath in him; and he fanned him, lifted him up, and rubbed him and laid him out upon the table. And h...</p>
 </li>
 <li>
-<p class="itemTitle">How Solomon Rose up to Slay Them</p>
-<p class="itemText">Thus spake King Solomon. And the King rose up in wrath and set out to pursue [the men of Ethiopia]. And when the King, and his nobles, and his mighty men of war rose up (i.e. had set out), the elders of Israel, and the widows, and the virgins gathered together in the house of God, and they wept for Zion, for the Tabernacle of the Law of God had been taken away from them. Now after Zadok had remained [senseless] for a season, his heart returned to him. And then the King commanded that the soldier...</p>
+<p class="itemTitle">How Solomon set out to kill them</p>
+<p class="itemText">Thus spoke King Solomon. And the King rose up in anger and set out to pursue the men of Ethiopia. And when the King, and his nobles, and his mighty men of war had set out, the elders of Israel, and the widows, and the virgins gathered together in the house of God, and they wept for Zion, for the Tabernacle of the Law of God had been taken away from them. Now after Zadok had remained senseless for a season, his heart returned to him. And then the King commanded that the soldiers should go forth o...</p>
 </li>
 <li>
-<p class="itemTitle">How the King Questioned an Egyptian, the Servant of Pharaoh</p>
-<p class="itemText">And Solomon left that place, and he met a noble of the nobles of Egypt, whom King Pharaoh had sent unto him with a gift; and there was an abundance of treasures with him, and he came and made obeisance to the King. And Solomon the King made haste to question him, even before he had presented his gift and embassy, and said unto him, “Hast thou seen men of Ethiopia fleeing by this road?” And the ambassador of Pharaoh answered and said unto the King, “O King, live for ever! My lord, King Pharaoh, s...</p>
+<p class="itemTitle">How the King questioned an Egyptian, the servant of Pharaoh</p>
+<p class="itemText">And Solomon left that place, and he met a noble of the nobles of Egypt, whom King Pharaoh had sent to him with a gift; and there was an abundance of treasures with him, and he came and made obeisance to the King. And Solomon the King went quickly to question him, even before he had presented his gift and embassy, and said to him, “Have you seen men of Ethiopia fleeing by this road?” And the ambassador of Pharaoh answered and said to the King, “Oh King, live forever! My lord, King Pharaoh, sent m...</p>
 </li>
 <li>
-<p class="itemTitle">How Solomon Lamented for Zion</p>
-<p class="itemText">And Solomon entered into his tent, and wept bitterly, and said, “O God, willest Thou to take away the Tabernacle of Thy Covenant from us in my days? If only Thou hadst taken away my life before this which Thou hast taken away in my days! For Thou canst not make Thy word to be a lie, and Thou canst not break Thy Covenant which Thou didst make with our fathers, with Noah Thy servant who kept righteousness, and with Abraham who did not transgress Thy commandment, and with Isaac Thy servant who kept...</p>
+<p class="itemTitle">How Solomon lamented for Zion</p>
+<p class="itemText">And Solomon entered into his tent, and wept bitterly, and said, “Oh God, will You to take away the Tabernacle of Your Covenant from us in my days? If only You had taken away my life before this which You have taken away in my days! For You can not make Your word to be a lie, and You cannot break Your Covenant which You did make with our fathers, with Noah Your servant who kept righteousness, and with Abraham who did not break Your Commandment, and with Isaac Your servant who kept his body pure f...</p>
 </li>
 <li>
 <p class="itemTitle">How Solomon Returned to Jerusalem</p>
