Cleanup up to Ch. 65

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -410,24 +410,24 @@
 <p class="itemText">And Solomon entered into his tent, and wept bitterly, and said, “Oh God, will You to take away the Tabernacle of Your Covenant from us in my days? If only You had taken away my life before this which You have taken away in my days! For You can not make Your word to be a lie, and You cannot break Your Covenant which You did make with our fathers, with Noah Your servant who kept righteousness, and with Abraham who did not break Your Commandment, and with Isaac Your servant who kept his body pure f...</p>
 </li>
 <li>
-<p class="itemTitle">How Solomon Returned to Jerusalem</p>
-<p class="itemText">And then Solomon came back to the city of Jerusalem, and he wept there with the elders of Jerusalem a great weeping in the house of God. And after this the King and Zadok the priest embraced each other, and they wept bitterly in the habitation of Zion, and they remained silent for a long time. And the elders rose up and spake unto the King, saying, “Be not thou sorrowful concerning this thing, O our Lord, for we know, from first to last, that without the Will of God Zion will not dwell [in any p...</p>
+<p class="itemTitle">How Solomon returned to Jerusalem</p>
+<p class="itemText">And then Solomon came back to the city of Jerusalem, and he wept there with the elders of Jerusalem a great weeping in the house of God. And after this the King and Zadok the priest embraced each other, and they wept bitterly in the habitation of Zion, and they remained silent for a long time. And the elders rose up and spoke to the King, saying, “Be not sorrowful concerning this thing, Oh our Lord, for we know, from first to last, that without the Will of God Zion will not dwell in any place, a...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the answer which Solomon made to them</p>
-<p class="itemText">And Solomon the King answered and said unto them, “Hearken ye unto me and to what I shall say unto you. Supposing He had taken me away whilst I was carrying Zion—what is impossible to God? And supposing He had taken you away whilst ye were carrying her—what is impossible to God? And supposing He were to make them to inherit our city, and destroy us—what is impossible to God? For everything is His, and none can gainsay His Will, and there is none who can transgress His command in heaven above or ...</p>
+<p class="itemTitle">Concerning the answer which Solomon gave to them</p>
+<p class="itemText">And Solomon the King answered and said to them, “Listen to me and to what I shall say to you. Supposing He had taken me away while I was carrying Zion — what is impossible to God? And supposing He had taken you away while you were carrying her — what is impossible to God? And supposing He were to make them to inherit our city, and destroy us — what is impossible to God? For everything is His, and none can dispute His Will, and there is none who can break His command in heaven above or on earth b...</p>
 </li>
 <li>
-<p class="itemTitle">How the nobles of Israel agreed [with the King]</p>
-<p class="itemText">And then the elders of Israel made answer and said unto him, “May thy good pleasure be done, and the good pleasure of the Lord God! As for us, none of us will transgress thy word, and we will not inform any other people that Zion hath been taken away from us.” And they established this covenant in the House of God—the elders of Israel with their King Solomon unto this day. And Solomon lived [thus] for eleven years after the taking away of Zion from him, and then his heart turned aside from the l...</p>
+<p class="itemTitle">How the nobles of Israel agreed with the King</p>
+<p class="itemText">And then the elders of Israel made answer and said to him, “May your good pleasure be done, and the good pleasure of the Lord God! As for us, none of us will break your word, and we will not inform any other people that Zion has been taken away from us.” And they established this covenant in the House of God — the elders of Israel with their King Solomon to this day. And Solomon lived thus for eleven years after the taking away of Zion from him, and then his heart turned aside from the love of G...</p>
 </li>
 <li>
 <p class="itemTitle">How the daughter of Pharaoh seduced Solomon</p>
-<p class="itemText">And then the daughter of Pharaoh appeared before Solomon, and said unto him, “It is good to worship the gods like my father and all the kings of Egypt who were before my father.” And Solomon answered and said unto her, “They call gods the things which have been made by the hands of the worker in metal, and the carpenter, and the potter, and the painter, and the hewer in stone, and the sculptor; these are not gods, but the work of the hand of man, in gold, and silver, in brass and lead, in iron a...</p>
+<p class="itemText">And then the daughter of Pharaoh appeared before Solomon, and said to him, “It is good to worship the gods like my father and all the kings of Egypt who were before my father.””And Solomon answered and said to her, “They call gods the things which have been made by the hands of the worker in metal, and the carpenter, and the potter, and the painter, and the hewer in stone, and the sculptor; these are not gods, but the work of the hand of man, in gold, and silver, in brass and lead, in iron and e...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the sin of Solomon</p>
-<p class="itemText">Now Solomon sinned an exceedingly great sin through the worship of idols, and from being a wise man he became a fool, and his sin is written down in the Book of the Prophets. And the Archbishops who were there answered and said, “Hath God had mercy on Solomon for this error which is written down [as] his sin?” Yea, God hath had mercy upon him, and his name is numbered with [the names of] Abraham, Isaac, and Jacob, and David his father in the Book of Life in heaven. For God is a forgiver of those...</p>
+<p class="itemText">Now Solomon sinned an exceedingly great sin through the worship of idols, and from being a wise man he became a fool, and his sin is written down in the Book of the Prophets. And the Archbishops who were there answered and said, “Has God had mercy on Solomon for this error which is written down as his sin?” Yes, God has had mercy upon him, and his name is numbered with the names of Abraham, Isaac, and Jacob, and David his father in the Book of Life in heaven. For God is a forgiver of those who h...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the prophecy of Christ</p>
