Cleanup up to Ch. 70

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -431,23 +431,23 @@
 </li>
 <li>
 <p class="itemTitle">Concerning the prophecy of Christ</p>
-<p class="itemText">Now, according to the interpretation of prophecy, the name Solomon signifieth in the secret speech “Christ.” And as Solomon built the house of God, so Christ raised up His Body and made it into the Church. And when He said unto the Jews, “Throw down this house, and in three days I will build it up [again],” He spake to them of the house of His Body. And as Solomon multiplied wives from alien peoples because of their beauty and winsomeness, and desires [arose] in him in his feigning love [for the...</p>
+<p class="itemText">Now, according to the interpretation of prophecy, the name Solomon signifies in the secret speech “Christ.” And as Solomon built the house of God, so Christ raised up His Body and made it into the Church. And when He said to the Jews, “Throw down this house, and in three days I will build it up again,” He spoke to them of the house of His Body. And as Solomon multiplied wives from foreign peoples because of their beauty and winsomeness, and desires arose in him in his feigning love for them, so ...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the lamentation of Solomon</p>
-<p class="itemText">And now I will tell you how he died. His days were sixty [years], when a sickness attacked him. And his days were not as the days of David his father, but they were twenty [years] shorter than his, because he was under the sway of women and worshipped idols. And the angel of death came and smote him [in] the foot, and he wept and said, “O Lord God of Israel, I am conquered by the terrestrial law, for there is no one free from blemish before Thee, O Lord, and there is no one righteous and wise be...</p>
+<p class="itemText">And now I will tell you how he died. His days were sixty years, when a sickness attacked him. And his days were not as the days of David his father, but they were twenty years shorter than his, because he was under the sway of women and worshiped idols. And the angel of death came and struck him in the foot, and he wept and said, “Oh Lord God of Israel, I am conquered by the earthly law, for there is no one free from blemish before You, Oh Lord, and there is no one righteous and wise before You,...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning Mary, Our Lady of Salvation</p>
-<p class="itemText">“And again, there shall be unto thee a sign that the Saviour shall come from thy seed, and that He shall deliver thee with thy fathers and thy seed after thee by His coming. Your salvation was created in the belly of Adam in the form of a Pearl before Eve. And when He created Eve out of the rib He brought her to Adam, and said unto them, ‘Multiply you from the belly of Adam.’ The Pearl did not go out into Cain or Abel, but into the third that went forth from the belly of Adam, and it entered int...</p>
+<p class="itemText">“And again, there shall be to you a sign that the Savior shall come from your descendants, and that He shall deliver you with your fathers and your descendants after you by His coming. Your salvation was created in the belly of Adam in the form of a Pearl before Eve. And when He created Eve out of the rib He brought her to Adam, and said to them, ‘Multiply from the belly of Adam.’ The Pearl did not go out into Cain or Abel, but into the third that went forth from the belly of Adam, and it entere...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Question of Solomon</p>
-<p class="itemText">And Solomon turned and looked at the Angel and stretched out both his hands, and said, “My lord, is the coming of the Saviour of which thou speakest near or far off?” And the Angel answered and said unto him, “He will come three and thirty generations from thy kin and from thy seed and will deliver you. But Israel will hate their Saviour, and will be envious of Him because He will work signs and miracles before them. And they will crucify Him, and will kill Him, and He shall rise up again and de...</p>
+<p class="itemTitle">Concerning the question of Solomon</p>
+<p class="itemText">And Solomon turned and looked at the Angel and stretched out both his hands, and said, “My lord, is the coming of the Savior of which you speak near or far off?” And the Angel answered and said to him, “He will come 33 generations from your family and from your descendants and will deliver you. But Israel will hate their Savior, and will be envious of Him because He will work signs and miracles before them. And they will crucify Him, and will kill Him, and He shall rise up again and deliver them...</p>
 </li>
 <li>
 <p class="itemTitle">How Rehoboam reigned</p>
-<p class="itemText">Then Zadok the priest took Rehoboam and made him king, and he anointed him and performed for him whatsoever the Law demanded. And Rehoboam laid a tablet of wood upon the Tabernacle, and he found it with the name of his father Solomon [written upon] it, and then they set him upon the king’s mule, and said unto him, “All hail! Long live the royal father!” and the city resounded with cries, and the trumpet was blown. And before Rehoboam could return to his father Solomon died. And they laid Solomon...</p>
+<p class="itemText">Then Zadok the priest took Rehoboam and made him king, and he anointed him and performed for him whatever the Law demanded. And Rehoboam laid a tablet of wood upon the Tabernacle, and he found it with the name of his father Solomon written upon it, and then they set him upon the king’s mule, and said to him, “All hail! Long live the royal father!” and the city resounded with cries, and the trumpet was blown. And before Rehoboam could return to his father, Solomon died. And they laid Solomon in t...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning Mary, the daughter of David</p>
