Cleanup up to Ch. 75

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -451,23 +451,23 @@
 </li>
 <li>
 <p class="itemTitle">Concerning Mary, the daughter of David</p>
-<p class="itemText">And from this it is evident that Mary was the daughter of David, and that Joseph was the son of David. Therefore was Mary betrothed to Joseph her kinsman, as it is said in the Gospel, “O Joseph, son of David, fear thou not to take to wife Mary thy betrothed, for that which is to be born of her is of the Holy Spirit, the Word of God.” And there was born of her God, the Word, Light of Light, God of God, Son of the Father, Who came and delivered His creation; from the hand of Sheôl, and from Satan,...</p>
+<p class="itemText">And from this it is evident that Mary was the daughter of David, and that Joseph was the son of David. Therefore Mary was engaged to Joseph her relative, as it is said in the Gospel, “Oh Joseph, son of David, fear not to wed Mary your engaged, for that which is to be born of her is of the Holy Spirit, the Word of God.” And there was born of her God, the Word, Light of Light, God of God, Son of the Father, Who came and delivered His creation; from the hand of Sheôl, and from Satan, and from death...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the King of Rômê (Constantinople)</p>
-<p class="itemText">And we will begin to tell you what we have heard, and what we have found written, and what we have seen concerning the King of Rômê. The kingdom of Rômê was the portion and dominion of Japhet, the son of Noah. And sitting down they made twelve great cities, and Darius built the greatest cities of their kingdoms: ’Anṭôkyâ (Antioch), Dîresyâ (Tyre?), and Bârtonyâ (Parthia?), and Râmyâ (Roma?), and those who reigned dwelt there; and King Constantine built Constantinople after his own name. Now the ...</p>
+<p class="itemTitle">Concerning the King of Byzantium</p>
+<p class="itemText">And we will begin to tell you what we have heard, and what we have found written, and what we have seen concerning the King of Byzantium. The kingdom of Byzantium was the portion and dominion of Japhet, the son of Noah. And sitting down they made twelve great cities, and Darius built the greatest cities of their kingdoms: Antioch, Tyre, and Parthia, Roma, and those who reigned lived there; and King Constantine built Constantinople after his own name. Now the sign of the Cross having appeared to ...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the first judgment of ’Adrâmî, King of Rômê</p>
-<p class="itemText">And ’Adrâmî said unto them, “Hearken ye to the judgment which I will declare unto you. If the sheep have destroyed all the shoots from the root of the vine, then they all belong to thee. And if they have eaten the leaves of the branches, and the blossoms of the grapes, take the sheep, shear their wool, and [take also] the young of those which have not yet brought forth. But the sheep which have already brought forth young for the first time leave to the owner of the sheep.” And all those who hea...</p>
+<p class="itemTitle">Concerning the first judgment of ’Adrâmî, King of Constantinople</p>
+<p class="itemText">And ’Adrâmî said to them, “Listen to the judgment which I will declare to you. If the sheep have destroyed all the shoots from the root of the vine, then they all belong to you. And if they have eaten the leaves of the branches, and the blossoms of the grapes, take the sheep, shear their wool, and take also the young of those which have not yet brought forth. But the sheep which have already brought forth young for the first time leave to the owner of the sheep.” And all those who heard the judg...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Medyâm</p>
-<p class="itemText">The king of Medyâm was of the seed of Shem. For of the seed of Isaac was Esau, who went forth from his mother’s womb with Jacob clinging to the sole of his foot; and Jacob carried away the right of the firstborn from Esau for the sake of a mess of pottage. And the name of Esau’s kingdom was called, according to his name of contempt, “Edom,” for the interpretation of “Edom” is “lentiles”; and because of this the seed of Esau were called “Edomites.” For through the greed of his belly he forsook an...</p>
+<p class="itemText">The king of Medyâm was of the descendants of Shem. For of the descendant of Isaac was Esau, who went forth from his mother’s womb with Jacob clinging to the sole of his foot; and Jacob carried away the right of the firstborn from Esau for the sake of a mess of stew. And the name of Esau’s kingdom was called, according to his name of contempt, “Edom,” for the interpretation of “Edom” is “lentils;” and because of this the descendants of Esau were called “Edomites.” For through the greed of his bel...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Babylon</p>
-<p class="itemText">Now the King of Babylon is of the seed of Shem, and we will show you clearly that the King of Babylon is of the seed of Shem. It came to pass in days of old that there lived in the kingdom of Manasseh, the King of Israel, a certain man whose name was Karmîn, and he was a fearer of God, and he gave many alms and oblations to the poor of Israel. And when he made offerings to the house of God, he did so with sincerity, and his tithe he gave twofold; and he was good in all his ways, and there was no...</p>
+<p class="itemText">Now the King of Babylon is of the descendants of Shem, and we will show you clearly that the King of Babylon is of the descendants of Shem. It came to pass in days of old that there lived in the kingdom of Manasseh, the King of Israel, a certain man whose name was Karmîn, and he was a fearer of God, and he gave many alms and offerings to the poor of Israel. And when he made offerings to the house of God, he did so with sincerity, and his tithe he gave twofold; and he was good in all his ways, an...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning lying witnesses</p>
