Cleanup up to Ch. 80

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -471,23 +471,23 @@
 </li>
 <li>
 <p class="itemTitle">Concerning lying witnesses</p>
-<p class="itemText">And there was a certain depraved man of the seed of Benjamin, whose name was Benyâs, who used to lead the mule of the King of Israel, and Karmîn used to feed him, together with the mule of King Manasseh. And among the neighbours of Karmîn there were certain men who were envious of him because of [his] pastures and wells, and because of the multitude of his flocks and herds and servants, for the region [where he had settled] was the inheritance of their fathers, and for this reason they wished to...</p>
+<p class="itemText">And there was a certain depraved man descended from Benjamin, whose name was Benyâs, who used to lead the mule of the King of Israel, and Karmîn used to feed him, together with the mule of King Manasseh. And among the neighbors of Karmîn there were certain men who were envious of him because of his pastures and wells, and because of the multitude of his flocks and herds and servants, for the region where he had settled was the inheritance of their fathers, and for this reason they wished to driv...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Persia</p>
-<p class="itemText">And the King of Persia is likewise of the seed of Shem, and we will inform you concerning the matters that relate to him. Judah begot two sons, and he brought in Tĕ‘mâr (Tamar) for his eldest son, and he died. And Judah sent his younger son to her that he might raise up seed to his brother by his brother’s wife. And he did that which God hated, and he did not wish to raise up seed to his brother as his father Judah had commanded him. Now when he lay with Tamar he made his seed to go into the gro...</p>
+<p class="itemText">And the King of Persia is likewise of the descendant of Shem, and we will inform you concerning the matters that relate to him. Judah sired two sons, and he brought in Tamar for his eldest son, and he died. And Judah sent his younger son to her that he might raise up a child to his brother by his brother’s wife. And he did that which God hated, and he did not wish to raise up a child to his brother as his father Judah had commanded him. Now when he lay with Tamar he made his sperm go into the gr...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Moab</p>
-<p class="itemText">And the King of Moab is of the seed of Shem, and we will inform you how this hath come to pass. When God made Abraham to depart from his father’s country into the land of Kârân (Harran), He made Lot to pass over into the land of Sodom and Gomorrah. And when God wished to blot out the people of Sodom and Gomorrah, He sent His Angels Michael and Gabriel to bring out Lot and to burn up the cities of Sodom and Gomorrah; and they destroyed them and brought out Lot with his children. And his wife turn...</p>
+<p class="itemText">And the King of Moab is of the descendants of Shem, and we will inform you how this has come to pass. When God made Abraham depart from his father’s country into the land of Harran, He made Lot pass over into the land of Sodom and Gomorrah. And when God wished to blot out the people of Sodom and Gomorrah, He sent His Angels Michael and Gabriel to bring out Lot and to burn up the cities of Sodom and Gomorrah; and they destroyed them and brought out Lot with his children. And his wife turned round...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Amalek</p>
-<p class="itemText">And it came to pass that when the elder daughter of Lot had brought forth her son, she said unto the younger daughter, “Come now, let us make our father drink wine, so that thou also mayest company with him that, peradventure, thou mayest get offspring.” And again they prepared wine, and again they spoke to him the words of foolishness, and said unto him, “Drink wine, O our father, so that thy heart may be comforted”; and he, the simple man, drank and became drunk. And again, when he had drunk a...</p>
+<p class="itemText">And it came to pass that when the elder daughter of Lot had brought forth her son, she said to the younger daughter, “Come now, let us make our father drink wine, so that you also may have sex with him that, perhaps, you may become pregnant.” And again they prepared wine, and again they spoke to him the words of foolishness, and said to him, “Drink wine, Oh our father, so that your heart may be comforted;” and he, the simple man, drank and became drunk. And again, when he had drunk and his mind ...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of the Philistines</p>
-<p class="itemText">And behold, the seed of Samson reigned over the Philistines. And Samson was of the seed of Dan, [one] of the twelve sons of Jacob, and he was the son of a handmaiden of Jacob; and we will inform you how this Samson came into being. The Angel of the Lord appeared to the mother of Samson and said unto her, “Keep thyself from all pollution, and company with no man except thy husband, for he who shall be born of thee shall be a Nazarite, holy to the Lord, and he shall be the deliverer of Israel from...</p>
+<p class="itemText">And behold, the descendant of Samson reigned over the Philistines. And Samson was a descendant of Dan, one of the 12 sons of Jacob, and he was the son of a handmaiden of Jacob; and we will inform you how this Samson came into being. The Angel of the Lord appeared to the mother of Samson and said to her, “Keep yourself from all pollution, and company with no man except your husband, for he who shall be born of you shall be a Nazarite, holy to the Lord, and he shall be the deliverer of Israel from...</p>
 </li>
 <li>
 <p class="itemTitle">How the son of Samson slew the son of the King of the Philistines</p>
