Cleanup up to Ch. 85

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -490,25 +490,25 @@
 <p class="itemText">And behold, the descendant of Samson reigned over the Philistines. And Samson was a descendant of Dan, one of the 12 sons of Jacob, and he was the son of a handmaiden of Jacob; and we will inform you how this Samson came into being. The Angel of the Lord appeared to the mother of Samson and said to her, “Keep yourself from all pollution, and company with no man except your husband, for he who shall be born of you shall be a Nazarite, holy to the Lord, and he shall be the deliverer of Israel from...</p>
 </li>
 <li>
-<p class="itemTitle">How the son of Samson slew the son of the King of the Philistines</p>
-<p class="itemText">Now that other son Akamḥêl, the son of Samson, spake unto his mother Delilah, saying, “Why am I not reigning and sitting upon this throne?’ And his mother said unto him, “Cease, my son. This throne did not belong to thy father, and this city was not thy father’s city; when the God of thy father hath let thee grow up thou shalt go to thy father’s throne.” And her son said unto her, “Nay, I will neither forsake thee, my mother, nor Maksâbâ my mother, and I will be king here.”</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And one day the two y...</p>
+<p class="itemTitle">How the son of Samson killed the son of the King of the Philistines</p>
+<p class="itemText">Now that other son Akamḥêl, the son of Samson, spoke to his mother Delilah, saying, “Why am I not reigning and sitting upon this throne?” And his mother said to him, “Cease, my son. This throne did not belong to your father, and this city was not your father’s city; when the God of your father has let you grow up you shall go to your father’s throne.” And her son said to her, “No, I will neither abandon you, my mother, nor Maksâbâ my mother, and I will be king here.”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And one day the two youths w...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the going down of Abraham into Egypt</p>
+<p class="itemTitle">Concerning Abraham going down into Egypt</p>
 <p class="itemText">And we could also inform you that when God had given unto Abraham glory and riches, he lacked a son. And Sârâh and Abraham talked together on their bed, and he said unto her, “Thou art barren,” and she said unto him, “It is not I who am barren but thyself”; and they continued to discuss the matter and to dispute together about it. And there came a famine in the land of Canaan, and Abraham heard that there was some food in the land of Egypt, the country of Pharaoh. And when he had spent all his p...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of the Ishmaelites</p>
-<p class="itemText">And therefore the children of Ishmael became kings over Tereb, and over Ḳebeṭ, and over Nôbâ, and Sôba, and Kuergue, and Kîfî, and Mâkâ, and Môrnâ, and Fînḳânâ, and ’Arsîbânâ, and Lîbâ, and Mase‘a, for they were the seed of Shem. And Isaac reigned over Judah and over ’Amôrêwôn, and over Kêṭêwôn, and ’Îyâbûsêwôn, and Fêrzêwôn, and ’Eêwêwôn, and Kêḳêdêwôn, and Rômyâ, and ’Anṣôkyâ (Antiochia), and Sôryâ (Syria), and Armenia, and Felesṭeêm (Palestine), and Ethiopia, and Edom, and Philistia, and Îyôâ...</p>
+<p class="itemText">And therefore the children of Ishmael became kings over Tereb, Ḳebeṭ, Nôbâ, Sôba, Kuergue, Kîfî, Mâkâ, Môrnâ, Fînḳânâ, ’Arsîbânâ, Lîbâ, and Mase‛a, for they were the seed of Shem. And Isaac reigned over Judah, ’Amôrêwôn, Kêṭêwôn, ’Îyâbûsêwôn, Fêrzêwôn, ’Eêwêwôn, Kêḳêdêwôn, Rômyâ, Antiochia, Syria, Armenia, Palestine, Ethiopia, Edom, Philistia, Îyôâb, Amalek, Phrygia, Babylon, Yônânesṭ, and ’Ebrâyast. For as God swore He gave all kingdoms, an exalted throne, and dominion to the descendants of She...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the King of Ethiopia and how he returned to his country</p>
-<p class="itemText">And the King of Ethiopia returned to his country with great joy and gladness; and marching along with their songs, and their pipes, and their wagons, like an army of heavenly beings, the Ethiopians arrived from Jerusalem at the city of Waḳêrôm in a single day. And they sent messengers in ships to announce [their arrival] to Mâkĕdâ, the Queen of Ethiopia, and to report to her how they had found every good thing, and how her son had become king, and how they had brought the heavenly Zion. And she ...</p>
+<p class="itemText">And the King of Ethiopia returned to his country with great joy and gladness; and marching along with their songs, and their pipes, and their wagons, like an army of heavenly beings, the Ethiopians arrived from Jerusalem at the city of Waḳêrôm in a single day. And they sent messengers in ships to announce their arrival to Mâkĕdâ, the Queen of Ethiopia, and to report to her how they had found every good thing, and how her son had become king, and how they had brought the heavenly Zion. And she ca...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the rejoicing of Queen Mâkedâ</p>
-<p class="itemText">And David the King came with great pomp unto his mother’s city, and then he saw in the height the heavenly Zion sending forth light like the sun. And when the Queen saw this she gave thanks unto the God of Israel, and praised Him. And she bowed low, and smote her breast, and [then] threw up her head and gazed into the heavens, and thanked her Creator; and she clapped her hands together, and sent forth shouts of laughter from her mouth, and danced on the ground with her feet; and she adorned her ...</p>
+<p class="itemTitle">Concerning the rejoicing of Queen Mâkĕdâ</p>
+<p class="itemText">And King Menyelek came with great pomp to his mother’s city, and then he saw in the height the heavenly Zion sending forth light like the sun. And when the Queen saw this she gave thanks to the God of Israel, and praised Him. And she bowed low, and struck her breast, and then threw up her head and gazed into the heavens, and thanked her Creator; and she clapped her hands together, and sent forth shouts of laughter from her mouth, and danced on the ground with her feet; and she adorned her whole ...</p>
 </li>
 <li>
 <p class="itemTitle">How Queen Mâkĕdâ made her son King</p>
